fix: change --color-base variable to use --background for improved contrast

--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -142,7 +142,7 @@ $breakpoints: (
   --sidebar-width: 260px;
   --blur: 10px;
 
-  --color-base: var(--foreground);
+  --color-base: var(--background);
   --color-coollabs: var(--primary);
   --color-text-primary: var(--foreground);
 
